# farbenfroh.io

./: .gitattributes  .gitignore  .gitmodules  .lintstagedrc.js  .prettierignore  Cargo.toml  flake.nix  fsdf[A  next.config.js  package.json  rust-toolchain  rust-toolchain.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
.cargo/: config
.github/workflows/: gh-pages.yml  production.yml
benches/: main_benchmark.rs
components/: GlobalStyles.jsx  Octocat.jsx  Octocat.module.css  Octocat.tsx  faerber.jsx  faerber.tsx  navbar.tsx  octocat-pride.jsx
lib/: colormath.js  colormath.ts  colorschemes.js  colorschemes.ts  worker.js  worker.ts
pages/: _app.jsx  _app.tsx  _document.jsx  _document.tsx  faerber.jsx  faerber.tsx  index.jsx  index.tsx
public/: site.webmanifest
src/: custom_lab.rs  lib.rs  main.rs
styles/: globals.css
