[package]
name = "faerber"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
"deltae" = "0.3.0"
"image" = {version = "0.24.5", features = [], default-features = false}
"lab" = "0.11.0"
"lazy_static" = "1.4.0"
"rayon" = "1.5.3"
"wasm-bindgen" = "0.2.83"
"wasm-bindgen-rayon" = "1.0.3"

[profile.release]
lto = true
opt-level= 's'

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "main_benchmark"
harness = false
